--- a/BayesianColibri/baco.tex
+++ b/BayesianColibri/baco.tex
@@ -184,7 +184,7 @@
         \begin{itemize}
             \item We can now handle many patterns such as $n$-grams, skipgrams, and flexgrams
             \item Tresholding patterns on many levels
-            \item Efficient storage of patterns
+            %\item Efficient storage of patterns
         \end{itemize}
     \end{block}
 \end{frame}
@@ -239,7 +239,7 @@
             \item[patterns] Adding skipgrams increases performance on cross domain evaluation
         \end{description}
     \end{block}
-
+    \vspace{-1em}
     {\small
         \begin{columns}[T,totalwidth=\textwidth]
             \begin{column}{0.5\textwidth}
@@ -353,7 +353,7 @@
 }
 
 \begin{tussenpagina}{}
-    \strut
+    
 
     \begin{figure}
         \includegraphics[width=0.95\textwidth]{images/dilbert.png}
