--- a/ruhuisstijl/beamerthemeruhuisstijl.sty
+++ b/ruhuisstijl/beamerthemeruhuisstijl.sty
@@ -7,6 +7,9 @@
 \DeclareOptionBeamer{official}
 {\PassOptionsToPackage{official=#1}{beamerouterthemeruhuisstijl}}
 
+\DeclareOptionBeamer{department}
+{\PassOptionsToPackage{department=#1}{beamerouterthemeruhuisstijl}}
+
 \ProcessOptionsBeamer
 
 \mode<presentation>
