Fixed the title page for the CLST theme

--- a/ruhuisstijl/beamercolorthemeruhuisstijl.sty
+++ b/ruhuisstijl/beamercolorthemeruhuisstijl.sty
@@ -2,8 +2,15 @@
 
 \ProcessOptionsBeamer
 
+
 \setbeamercolor{normal text}{fg=ruhuisstijlzwart}
 \setbeamercolor{frametitle}{fg=ruhuisstijlrood}
+
+\ifthenelse{\equal{\dept}{clst}}{%
+    \setbeamercolor{title}{fg=white}
+}{%
+    \setbeamercolor{title}{fg=black}
+}
 
 
 \mode<all>
