--- a/ruhuisstijl/beamerouterthemeruhuisstijl.sty
+++ b/ruhuisstijl/beamerouterthemeruhuisstijl.sty
@@ -8,7 +8,7 @@
 \DeclareOptionBeamer{official}[false]{\csname beamer@official#1\endcsname}
 
 \newcommand{\dept}{none}
-\DeclareOptionBeamer{department}{\renewcommand{\dept}{#1}
+\DeclareOptionBeamer{department}{\renewcommand{\dept}{#1}}
 
 \ProcessOptionsBeamer
 
