--- a/ruhuisstijl/beamerthemeruhuisstijl.sty
+++ b/ruhuisstijl/beamerthemeruhuisstijl.sty
@@ -9,6 +9,7 @@
 
 \DeclareOptionBeamer{department}
 {\PassOptionsToPackage{department=#1}{beamerouterthemeruhuisstijl}}
+%\PassOptionsToPackage{department=#1}{beamerinnerthemeruhuisstijl}}
 
 \ProcessOptionsBeamer
 
