--- a/ruhuisstijl/example.tex
+++ b/ruhuisstijl/example.tex
@@ -5,7 +5,8 @@
 \author{lama-fan}
 
 %\usetheme[official=false]{ruhuisstijl}
-\usetheme[official=true]{ruhuisstijl}
+%\usetheme[official=true]{ruhuisstijl}
+\usetheme[official=true,department=clst]{ruhuisstijl}
 
 \begin{document}
 
