--- a/ruhuisstijl/example.tex
+++ b/ruhuisstijl/example.tex
@@ -46,21 +46,21 @@
     \end{block}
 
     \begin{block}{Plaats teksten altijd in zwart of rood}
-        \begin{itemize}
-            \item Paginatitel: RU huisstijl rood \emph{(RGB: 190, 49, 26)}
-            \item Inhoud tekst en tussenkoppen: zwart
-        \end{itemize}
+        \begin{description}
+            \item[Paginatitel] RU huisstijl rood \emph{(RGB: 190, 49, 26)} Ook maar eens even kijken wat er gebeurt als deze regel te lang is.
+            \item[Inhoud tekst en tussenkoppen] zwart
+        \end{description}
     \end{block}
 
     \begin{block}{Maak altijd gebruik vastgestelde kantlijn}
         \begin{itemize}
-            \item Titel en tekst/inhoud: horizontaal vanaf links 2,5 cm
+            \item Titel en tekst/inhoud\footnote{Afbeeldingen en teksten mogen nooit over de onderste lijn en het logo geplaatst worden.}
+: horizontaal vanaf links 2,5 cm
             \item Titel: verticaal vanaf boven 2 cm
             \item Tekst/inhoud: verticaal vanaf boven 5 cm
         \end{itemize}
     \end{block}
 
-    {\tiny Afbeeldingen en teksten mogen nooit over de onderste lijn en het logo geplaatst worden.}
 \end{frame}
 
 \begin{frame}
@@ -89,7 +89,8 @@
     \end{block}
     \vspace{1em}
 
-    {\tiny Hierna volgen enkele voorbeeldpagina's, de paginatitels zijn gelijk aan de naam van het sjabloon}
+    \footnotetext[]{Hierna volgen enkele voorbeeldpagina's, de paginatitels zijn gelijk aan de naam van het sjabloon}
+
 \end{frame}
 
 \begin{tussenpagina}{Tussenpagina}{Op een tussenpagina mag wel extra beeld toegevoegd worden.}
