--- a/ruhuisstijl/example.tex
+++ b/ruhuisstijl/example.tex
@@ -5,8 +5,8 @@
 \author{lama-fan}
 
 %\usetheme[official=false]{ruhuisstijl}
-%\usetheme[official=true]{ruhuisstijl}
-\usetheme[official=true,department=clst]{ruhuisstijl}
+\usetheme[official=true]{ruhuisstijl}
+%\usetheme[official=true,department=clst]{ruhuisstijl}
 
 \begin{document}
 
@@ -47,7 +47,7 @@
 
     \begin{block}{Plaats teksten altijd in zwart of rood}
         \begin{description}
-            \item[Paginatitel] RU huisstijl rood \emph{(RGB: 190, 49, 26)} Ook maar eens even kijken wat er gebeurt als deze regel te lang is.
+            \item[Paginatitel] RU huisstijl rood \emph{(RGB: 190, 49, 26)}% Ook maar eens even kijken wat er gebeurt als deze regel te lang is.
             \item[Inhoud tekst en tussenkoppen] zwart
         \end{description}
     \end{block}
@@ -87,9 +87,40 @@
             \item Dia's > Indelingen > \rured{RU Titelpagina's}
         \end{itemize}
     \end{block}
-    \vspace{1em}
 
-    \footnotetext[]{Hierna volgen enkele voorbeeldpagina's, de paginatitels zijn gelijk aan de naam van het sjabloon}
+    \footnotetext{Hierna volgen enkele voorbeeldpagina's, de paginatitels zijn gelijk aan de naam van het sjabloon}
+
+\end{frame}
+
+\begin{frame}{Opsommingen enzo}
+    \begin{itemize}
+        \item Dit is item 1
+        \begin{itemize}
+            \item Dit is een ander item 1.1
+            \item[$\Gamma$] Een \emph{custom} item 1.2
+            \begin{itemize}
+                \item $\alpha \beta \gamma$
+                \item Maak deze regel dan maar gewoon lekker lang om te zien hoe de indentatie is.
+            \end{itemize}
+        \end{itemize}
+        \item Item 2 dan maar
+    \end{itemize}
+
+    \begin{enumerate}
+        \item First item
+        \begin{enumerate}
+            \item Nested.
+        \end{enumerate}
+    \end{enumerate}
+
+\[ a+b=4 \]
+
+\begin{equation}
+    \begin{split}
+        a = 2 \\
+        b = 2
+    \end{split}
+\end{equation}
 
 \end{frame}
 
@@ -158,7 +189,8 @@ aut et es dellab ipsum, ium alis aboriandunt ea sinverios sequo ea consedi psapi
     \frametitle{Vergelijking}
         
     \begin{columns}[T,totalwidth=\linewidth]
-        \begin{column}{0.475\textwidth}
+        %\begin{column}{0.475\textwidth}
+        \begin{column}{0.5\textwidth}
             \begin{block}{Sapienis simet esto ugit voluptatio eseria possimaio opturitatur}
                 \begin{itemize}
                     \item Nem aut aut ipsa nest volo doluptat vendelique nimus simossi.
@@ -168,7 +200,7 @@ aut et es dellab ipsum, ium alis aboriandunt ea sinverios sequo ea consedi psapi
                 \end{itemize}
             \end{block}
         \end{column}
-        \begin{column}{0.475\textwidth}
+        \begin{column}{0.5\textwidth}
             \begin{block}{Imus acerita dis quasper lita tiaestis acesequid et ut moluptas}
                 \begin{itemize}
                     \item Quisqui aut aut volutem quam quo tet, quam iliquiatqui conseque dita
@@ -192,14 +224,12 @@ aut et es dellab ipsum, ium alis aboriandunt ea sinverios sequo ea consedi psapi
     \frametitle{Voorbeeld van een tabel}
 
     \begin{tabular}{=l +r +r +r +r }
-%        \rowcolor{ruhuisstijlrood}\rowfont{\color{white}}
         \rowcolor{ruhuisstijlrood}\rowstyle{\color{white}} & Kolom 1 & Kolom 2 & Kolom 3 & Kolom 4 \\
         Rij 1 & 101 & 201 & 301 & 401 \\
         Rij 2 & 102 & 202 & 302 & 402 \\
         Rij 3 & 103 & 203 & 303 & 403 \\
         Rij 4 & 104 & 204 & 304 & 404 \\
         Rij 5 & 105 & 205 & 305 & 405 \\
-%        \rowfont{\color{ruhuisstijlrood}}
         \rowstyle{\color{ruhuisstijlrood}}Totaal & 515 & 1015 & 1515 & 2014
     \end{tabular}
 \end{frame}
