Added examples and fixed the white

--- a/ruhuisstijl/beamercolorthemeruhuisstijl.sty
+++ b/ruhuisstijl/beamercolorthemeruhuisstijl.sty
@@ -4,18 +4,23 @@
 
 
 \setbeamercolor{normal text}{fg=ruhuisstijlzwart}
+\setbeamercolor{structure}{fg=ruhuisstijlzwart}
+\setbeamercolor{example text}{fg=ruhuisstijlzwart}
 \setbeamercolor{frametitle}{fg=ruhuisstijlrood}
+\setbeamercolor{alerted text}{fg=ruhuisstijlrood}
 
 \ifthenelse{\equal{\dept}{clst}}{%
-    \setbeamercolor{title}{fg=white}
+    \setbeamercolor{title}{fg=ruhuisstijlwit}
 }{%
-    \setbeamercolor{title}{fg=black}
+    \setbeamercolor{title}{fg=ruhuisstijlzwart}
 }
 
 
 \mode<all>
 
+%\definecolor{ruhuisstijlrood}{rgb}{190,49,26}
 \definecolor{ruhuisstijlrood}{rgb}{0.745,0.192,0.102}
 \definecolor{ruhuisstijlzwart}{rgb}{0,0,0}
-\definecolor{ruhuisstijlwit}{rgb}{1,1,1}
+\definecolor{ruhuisstijlwit}{rgb}{0.98,0.98,0.98}
+%\definecolor{ruhuisstijlwit}{rgb}{250,250,250}
 
