--- a/ruhuisstijl/example.tex
+++ b/ruhuisstijl/example.tex
@@ -92,8 +92,23 @@
 
 \end{frame}
 
-\begin{frame}{Opsommingen enzo}
+\begin{frame}{Hebban olla vogala nestas hagunnan hinase hic anda thu?}
     \begin{itemize}
+        \item Wat unbidan we nu
+        \begin{itemize}
+            \item Habent omnes uolucres nidos inceptos nisi ego et tu. Quid expectamus nunc.
+            \begin{itemize}
+                \item Have all birds begun nests, except me and you, what are we waiting for?
+                \item Es haben alle V\"ogel Nester begonnen, nicht aber ich und du, was wartet Ihr nun? 
+            \end{itemize}
+        \end{itemize}
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Opsommingen enzo}
+    Eerst even wat normale tekst om de kantlijn te bepalen.
+    \begin{itemize}
+        \item[$\star$] Item 0
         \item Dit is item 1
         \begin{itemize}
             \item Dit is een ander item 1.1
